# fractal-web

./: .env  .env.development  .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  ATTRIBUTIONS.md  CHANGELOG.md  LICENSE  README.md  build-docs.sh  doc-requirements.txt  eslint.config.js  eslint.config.mjs  index.html  jsconfig.json  mcr.config.unit.js  mkdocs.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  serve-docs.py  svelte.config.js  vite.config.js  vitest-setup.d.ts  vitest.setup.js  zensical.toml
.github/: dependabot.yml  pull_request_template.md
__tests__/: AlertError.test.js  JSchema.test.js  JobLogsModal.test.js  JobsList.test.js  Paginator.test.js  StandardErrorAlert.test.js  TaskCollection.test.js  TimestampCell.test.js  VersionUpdate.test.js  admin_jobs_page.test.js  component_utilities.test.js  errors.test.js  job_utilities.test.js  json_validator.test.js  logger.test.js  schema_management.test.js  selected_api_version.test.js  semver.test.js  tasks_page.test.js  user_utilities.test.js
changelog/: index.html
components/: package-lock.json  package.json  svelte.config.js  vite.config.js
development/: index.html
docs/: README.md  contribute.md  dependencies.md  development.md  environment-variables.md  examples.md  extra.css  fractal_server.md  index.md  oauth2.md  (+8 more)
lib/fractal-server/my-tasks/: README.md  pyproject.toml
tests/data/fractal-tasks-core/: README.md  pyproject.toml
tests/data/fractal-tasks-core/fractal_tasks_core/: __FRACTAL_MANIFEST__.json
(+1878 files in other folders)
