[tool.poetry]
name = "fractal-tasks-core"
version = "0.9.0"
description = ""
authors = ["Fractal Fractal <fractal@fractal.org>"]
packages = [{include = "fractal_tasks_core"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
